# turcode

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: commands.rs  mod.rs
src-tauri/src/config/: commands.rs  mod.rs
src-tauri/src/editor/: commands.rs  mod.rs  syntax.rs
src-tauri/src/fs/: commands.rs  mod.rs  watcher.rs
src-tauri/src/git/: commands.rs  mod.rs
src-tauri/src/lsp/: commands.rs  mod.rs
src-tauri/src/utils/: mod.rs
src/components/: Editor.tsx  FileExplorer.tsx  Layout.tsx  TabManager.tsx  Terminal.tsx
src/components/icons/: index.tsx
