[package]
name = "turkcode"
version = "0.1.0"
description = "TurkCode IDE - Modern Integrated Development Environment for Turkish developers"
authors = ["TurkCode Team"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "turkcode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["shell-open", "dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "path-all"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.36", features = ["full"] }
tree-sitter = "0.22.0"
tower-lsp = "0.20.0"
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
rand = "0.8.5"
log = "0.4.21"
env_logger = "0.11.3"
libgit2 = "0.18.0"

